[package]
name = "rustmo-devices"
version = "0.1.0"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2018"

[dependencies]
rustmo_server = {version = "*", path = "../rustmo-server" }
byteorder = "1.3.2"
reqwest = "0.9.22"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
serde-xml-rs = "0.3.1"