[package]
name = "rustmo-devices"
version = "0.1.2"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2018"
license = "MIT"
description = "VirtualDevice implementations for Rustmo"
homepage = "https://github.com/eeeebbbbrrrr/rustmo"
documentation = "https://github.com/eeeebbbbrrrr/rustmo"
repository = "https://github.com/eeeebbbbrrrr/rustmo"
readme = "README.md"

[dependencies]
rustmo-server = {version = "0.1.1", path = "../rustmo-server" }
byteorder = "1.4.3"
ureq = "2.5.0"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
serde-xml-rs = "0.6.0"
telnet = "0.2.1"
crossbeam = "0.8.2"
