[package]
name = "rustmo-devices"
version = "0.1.2"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2021"
license = "MIT"
description = "VirtualDevice implementations for Rustmo"
homepage = "https://github.com/eeeebbbbrrrr/rustmo"
documentation = "https://github.com/eeeebbbbrrrr/rustmo"
repository = "https://github.com/eeeebbbbrrrr/rustmo"
readme = "README.md"

[dependencies]
byteorder = "1.4.3"
crossbeam = "0.8.2"
enum-primitive-derive = "0.2.2"
num-derive = "0.3.3"
num-traits = "0.2.15"
parking_lot = "0.12.1"
rustmo-server = {version = "0.1.1", path = "../rustmo-server" }
scraper = "0.13.0"
serde = "1.0.164"
serde-xml-rs = "0.6.0"
serde_derive = "1.0.164"
serde_json = "1.0.97"
telnet = "0.2.1"
tracing = "0.1.37"
ureq = "2.7.1"
wake-on-lan = "0.2.0"
