[package]
name = "rustmo-server"
version = "0.1.2"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Talk to your code with Rustmo via Alexa"
homepage = "https://github.com/eeeebbbbrrrr/rustmo"
documentation = "https://github.com/eeeebbbbrrrr/rustmo"
repository = "https://github.com/eeeebbbbrrrr/rustmo"
readme = "../README.md"

[dependencies]
net2 = "0.2.38"
uuid = { version= "1.2.1", features = ["v4"] }
ureq = "2.5.0"
regex = "1.6.0"
hyper = "0.10.16"
rayon = "1.5.3"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
serde-xml-rs = "0.6.0"
parking_lot = "0.12.1"
once_cell = "1.16.0"
tracing = "0.1.37"