[package]
name = "rustmo-server"
version = "0.1.2"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Talk to your code with Rustmo via Alexa"
homepage = "https://github.com/eeeebbbbrrrr/rustmo"
documentation = "https://github.com/eeeebbbbrrrr/rustmo"
repository = "https://github.com/eeeebbbbrrrr/rustmo"
readme = "../README.md"

[dependencies]
hyper = "0.10.16"
net2 = "0.2.38"
once_cell = "1.16.0"
parking_lot = "0.12.1"
rayon = "1.5.3"
regex = "1.6.0"
serde = "1.0.147"
serde-xml-rs = "0.6.0"
serde_derive = "1.0.147"
serde_json = "1.0.87"
tracing = "0.1.37"
ureq = "2.5.0"
uuid = { version= "1.2.1", features = ["v4"] }