[package]
name = "rustmo-server"
version = "0.1.2"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Talk to your code with Rustmo via Alexa"
homepage = "https://github.com/eeeebbbbrrrr/rustmo"
documentation = "https://github.com/eeeebbbbrrrr/rustmo"
repository = "https://github.com/eeeebbbbrrrr/rustmo"
readme = "../README.md"

[dependencies]
hyper = "0.10.16"
net2 = "0.2.39"
once_cell = "1.18.0"
parking_lot = "0.12.1"
rayon = "1.7.0"
regex = "1.8.4"
serde = "1.0.164"
serde-xml-rs = "0.6.0"
serde_derive = "1.0.164"
serde_json = "1.0.97"
tracing = "0.1.37"
ureq = "2.7.1"
uuid = { version= "1.3.4", features = ["v4"] }
postgres = "0.19.5"
